✏️ Fix the broken reference link of the title with Emoji.

--- a/docs/contents/document/quick-start/how-to-run.mdx
+++ b/docs/contents/document/quick-start/how-to-run.mdx
@@ -75,7 +75,7 @@ You can provide your API token directly as a command-line argument:
 ## Running the Server
 
 :::info Alternative Deployment Options
-This section covers running the server with Python. For containerized deployments, see [🐳 Docker Usage](#🐳-docker-usage) section below, which provides multiple server modes and production-ready configurations.
+This section covers running the server with Python. For containerized deployments, see [🐳 Docker Usage](#-docker-usage) section below, which provides multiple server modes and production-ready configurations.
 :::
 
 ### Basic Usage
