--- a/docs/contents/development/ci-cd/additional-ci-workflows.mdx
+++ b/docs/contents/development/ci-cd/additional-ci-workflows.mdx
@@ -11,10 +11,44 @@ This document covers the specialized CI workflows that support specific aspects 
 
 The project includes several specialized CI workflows that handle specific operational tasks:
 
-- **🔍 API Specification Checking** - Automated monitoring of Slack API changes
+- **🔍 Slack Event Types Validation** - Weekly validation of Slack event types against official API spec
 - **🐳 Docker CI** - Container image building and testing
 - **📋 DockerHub README CI** - Repository description synchronization
 - **🤖 Documentation Auto-Approve & Auto-Merge** - Streamlined docs updates
+
+---
+
+## Slack Event Types Validation
+
+[![Validate Slack Event Types](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/validate_slack_event_types.yml/badge.svg)](https://github.com/Chisanan232/slack-mcp-server/actions/workflows/validate_slack_event_types.yml)
+
+The `validate_slack_event_types.yml` workflow automatically validates that our SlackEvent enum stays synchronized with the official Slack Events API specification.
+
+**Triggers:**
+- **Scheduled**: Every Tuesday at 19:33 UTC (Wednesday 03:33 Taipei time)
+- **Manual**: Workflow dispatch for on-demand validation
+- **Development**: Push triggers available for testing (currently commented out)
+
+**Purpose**: Ensures the project's SlackEvent enum implementation remains up-to-date with the official Slack API specification.
+
+**Key Features:**
+- **Automated API Spec Fetching** - Downloads latest Slack Events API specification from GitHub
+- **Event Type Extraction** - Parses the API spec to extract all defined event types
+- **Enum Validation** - Compares extracted events with the current SlackEvent enum implementation
+- **Weekly Monitoring** - Scheduled runs ensure timely detection of API changes
+- **Validation Script** - Uses `scripts/ci/validate_slack_event_types.py` for comprehensive checking
+
+**Validation Process:**
+1. **Fetch API Spec**: Downloads `slack_events_api_async_v1.json` from official Slack API specs repository
+2. **Extract Events**: Parses JSON specification to identify all event types
+3. **Compare Implementation**: Validates that `slack_mcp/events.py` SlackEvent enum contains all required events
+4. **Report Results**: Exits with appropriate status code for CI/CD integration
+
+**Safety Mechanisms:**
+- Validates against official Slack API specification source
+- Includes known message subtypes that might not be explicitly documented
+- Provides detailed output for debugging validation failures
+- Supports strict mode for exact enum matching
 
 ---
 
