--- a/docs/contents/development/ci-cd/continuous-integration.mdx
+++ b/docs/contents/development/ci-cd/continuous-integration.mdx
@@ -15,7 +15,7 @@ This document covers the Continuous Integration (CI) workflows used to maintain 
 
 ## Workflow Triggers
 
-Our CI workflow (`ci.yaml`) is triggered on:
+Our CI workflow ([`ci.yaml`](https://github.com/Chisanan232/slack-mcp-server/blob/master/.github/workflows/ci.yaml)) is triggered on:
 
 - **Push to master branch**: Excluding branches with "e2e" in their name
 - **Pull requests to master**: Excluding branches with "e2e" in their name
@@ -23,8 +23,8 @@ Our CI workflow (`ci.yaml`) is triggered on:
   - GitHub Actions workflow files
   - Python source code (`slack_mcp/**/*.py`)
   - Test files (`test/**/*.py`)
-  - Test configuration files (`.coveragerc`, `pytest.ini`, etc.)
-  - Project configuration (`pyproject.toml`, `uv.lock`)
+  - Test configuration files ([`.coveragerc`](https://github.com/Chisanan232/slack-mcp-server/blob/master/.coveragerc), [`pytest.ini`](https://github.com/Chisanan232/slack-mcp-server/blob/master/pytest.ini), etc.)
+  - Project configuration ([`pyproject.toml`](https://github.com/Chisanan232/slack-mcp-server/blob/master/pyproject.toml), [`uv.lock`](https://github.com/Chisanan232/slack-mcp-server/blob/master/uv.lock))
 
 ## CI Workflow Structure
 
@@ -42,7 +42,7 @@ graph TD
 
 The CI process uses several reusable workflows to streamline the execution:
 
-### 1. Build and Test (`rw_build_and_test.yaml`)
+### 1. Build and Test ([`rw_build_and_test.yaml`](https://github.com/Chisanan232/slack-mcp-server/blob/master/.github/workflows/rw_build_and_test.yaml))
 
 - Sets up Python environment (Python 3.13)
 - Installs dependencies via Poetry
@@ -67,7 +67,7 @@ As part of the test process, the following checks are performed:
 
 ## Multi-Python Version Testing
 
-The project uses a dedicated workflow (`rw_uv_run_test_with_multi_py_versions.yaml`) to test across multiple Python versions, ensuring compatibility.
+The project uses a dedicated workflow ([`rw_uv_run_test_with_multi_py_versions.yaml`](https://github.com/Chisanan232/slack-mcp-server/blob/master/.github/workflows/rw_uv_run_test_with_multi_py_versions.yaml)) to test across multiple Python versions, ensuring compatibility.
 
 ---
 
